--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@vee-validate/zod": "^4.14.7",
     "pinia": "^2.2.6",
+    "vee-validate": "^4.14.7",
     "vue": "^3.5.12",
-    "vue-router": "^4.4.5"
+    "vue-router": "^4.4.5",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
