--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
   },
   "dependencies": {
     "@vee-validate/zod": "^4.14.7",
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.7",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.8.1",
     "pinia": "^2.2.6",
     "vee-validate": "^4.14.7",
     "vue": "^3.5.12",
